<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RVFragment">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg"
            app:layout_constraintBottom_toTopOf="@+id/rv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabBackground="@color/bg"
            app:tabIndicatorColor="@color/bg"
            app:tabMode="auto"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/text">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabFeaturedApps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/featured" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabSpecials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/specials" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_releases" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabIComing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coming_soon" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_sellers" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/favorite" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>